commit journalier d'avancement

--- a/detailed_counts/full_output/PSYC.csv_full.html
+++ b/detailed_counts/full_output/PSYC.csv_full.html
@@ -21,8 +21,7 @@
                 <div style="display: flex; flex-direction: row; height: 100vh">
                     <iframe src="detailed_counts\charts\PSYC.csv_DistribClean.html" width="50%" height="100%"></iframe>
                     <iframe src="detailed_counts\charts\PSYC.csv_DistribUnclean.html" width="50%" height="100%"></iframe>
-                </div>
-            </div>
+                </div></div>
         </body>
         </html>
         
