--- a/detailed_counts/full_output/index.html
+++ b/detailed_counts/full_output/index.html
@@ -38,7 +38,23 @@
     </head>
     <body>
         <div>
-    <a href="full_output/issn_publication_counts.csv_full.html" target="content"><button>issn_publication_counts</button></a>
+    <a href="full_output/AGRI.csv_full.html" target="content"><button>AGRI</button></a>
+<a href="full_output/ARTS.csv_full.html" target="content"><button>ARTS</button></a>
+<a href="full_output/BIOC.csv_full.html" target="content"><button>BIOC</button></a>
+<a href="full_output/BUSI.csv_full.html" target="content"><button>BUSI</button></a>
+<a href="full_output/CENG.csv_full.html" target="content"><button>CENG</button></a>
+<a href="full_output/COMP.csv_full.html" target="content"><button>COMP</button></a>
+<a href="full_output/DECI.csv_full.html" target="content"><button>DECI</button></a>
+<a href="full_output/DENT.csv_full.html" target="content"><button>DENT</button></a>
+<a href="full_output/EART.csv_full.html" target="content"><button>EART</button></a>
+<a href="full_output/ECON.csv_full.html" target="content"><button>ECON</button></a>
+<a href="full_output/ENER.csv_full.html" target="content"><button>ENER</button></a>
+<a href="full_output/ENGI.csv_full.html" target="content"><button>ENGI</button></a>
+<a href="full_output/ENVI.csv_full.html" target="content"><button>ENVI</button></a>
+<a href="full_output/HEAL.csv_full.html" target="content"><button>HEAL</button></a>
+<a href="full_output/IMMU.csv_full.html" target="content"><button>IMMU</button></a>
+<a href="full_output/MATE.csv_full.html" target="content"><button>MATE</button></a>
+<a href="full_output/MATH.csv_full.html" target="content"><button>MATH</button></a>
 <a href="full_output/MULT.csv_full.html" target="content"><button>MULT</button></a>
 <a href="full_output/NEUR.csv_full.html" target="content"><button>NEUR</button></a>
 <a href="full_output/NURS.csv_full.html" target="content"><button>NURS</button></a>
