--- a/detailed_counts/full_output/EART.csv_full.html
+++ b/detailed_counts/full_output/EART.csv_full.html
@@ -22,7 +22,9 @@
                     <iframe src="detailed_counts\charts\EART.csv_DistribClean.html" width="50%" height="100%"></iframe>
                     <iframe src="detailed_counts\charts\EART.csv_DistribUnclean.html" width="50%" height="100%"></iframe>
                 </div>
-            </div>
+                <div>
+                     <iframe src="detailed_counts\charts\..\..\results\jaccard_clean_EART_pie.html" width="100%" height="100%"></iframe>
+                </div></div>
         </body>
         </html>
         
