--- a/detailed_counts/full_output/MEDI.csv_full.html
+++ b/detailed_counts/full_output/MEDI.csv_full.html
@@ -16,13 +16,15 @@
         <body>
             <div style="width: 100%">
                 <div>
-                    <iframe src="detailed_counts\charts\MEDI.csv.html" width="100%" height="100%"></iframe>
+                    <iframe src="detailed_counts/charts/MEDI.csv.html" width="100%" height="100%"></iframe>
                 </div>
                 <div style="display: flex; flex-direction: row; height: 100vh">
-                    <iframe src="detailed_counts\charts\MEDI.csv_DistribClean.html" width="50%" height="100%"></iframe>
-                    <iframe src="detailed_counts\charts\MEDI.csv_DistribUnclean.html" width="50%" height="100%"></iframe>
+                    <iframe src="detailed_counts/charts/MEDI.csv_DistribClean.html" width="50%" height="100%"></iframe>
+                    <iframe src="detailed_counts/charts/MEDI.csv_DistribUnclean.html" width="50%" height="100%"></iframe>
                 </div>
-            </div>
+                <div>
+                     <iframe src="..\charts\..\..\results\jaccard_clean_MEDI_pie.html" width="100%" height="100%"></iframe>
+                </div></div>
         </body>
         </html>
         
